# cs148raytracer-public

./: CMakeLists.txt  README.md  main.cpp
assets/: sphere.mtl
assets/CornellBox/: CornellBox-Assignment6-Alt.mtl  CornellBox-Assignment6-Test.mtl  CornellBox-Assignment6.mtl  CornellBox-Assignment7-Alt.mtl  CornellBox-Assignment7.mtl  CornellBox-Assignment8.mtl  CornellBox-Photon.mtl
assignment5/: Assignment5.cpp  Assignment5.h
assignment6/: Assignment6.cpp  Assignment6.h
assignment7/: Assignment7.cpp  Assignment7.h
assignment8/: Assignment8.cpp  Assignment8.h
common/: Application.cpp  Application.h  RayTracer.cpp  RayTracer.h  common.h  core.h
common/Acceleration/: AccelerationCommon.h  AccelerationGenerator.cpp  AccelerationGenerator.h  AccelerationNode.cpp  AccelerationNode.h  AccelerationStructure.cpp  AccelerationStructure.h  AccelerationTypes.h
common/Acceleration/BVH/: BVHAcceleration.cpp  BVHAcceleration.h
common/Acceleration/BVH/Internal/: BVHNode.cpp  BVHNode.h
common/Acceleration/Naive/: NaiveAcceleration.cpp  NaiveAcceleration.h
common/Acceleration/UniformGrid/: UniformGridAcceleration.cpp  UniformGridAcceleration.h
common/Acceleration/UniformGrid/Internal/: Voxel.cpp  Voxel.h  VoxelGrid.cpp  VoxelGrid.h
common/Intersection/: IntersectionState.cpp  IntersectionState.h
common/Output/: ImageWriter.cpp  ImageWriter.h
common/Rendering/: Renderer.cpp  Renderer.h
common/Rendering/Material/: Material.cpp  Material.h
common/Rendering/Material/BlinnPhong/: BlinnPhongMaterial.cpp  BlinnPhongMaterial.h
common/Rendering/Renderer/Backward/: BackwardRenderer.cpp  BackwardRenderer.h
common/Rendering/Renderer/Forward/: ForwardRenderer.cpp  ForwardRenderer.h
common/Rendering/Renderer/Photon/: Photon.cpp  Photon.h  PhotonMappingRenderer.cpp  PhotonMappingRenderer.h
common/Rendering/Textures/: CubeMapTexture.cpp  CubeMapTexture.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
common/Sampling/: ColorSampler.cpp  ColorSampler.h  Sampler.cpp  Sampler.h  SamplerCommon.h
common/Sampling/Adaptive/Simple/: SimpleAdaptiveSampler.cpp  SimpleAdaptiveSampler.h
common/Sampling/Jitter/: JitterColorSampler.cpp  JitterColorSampler.h  JitterSampler.cpp  JitterSampler.h
common/Sampling/Random/: RandomSampler.cpp  RandomSampler.h
common/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
common/Scene/Camera/: Camera.cpp  Camera.h
common/Scene/Camera/Perspective/: PerspectiveCamera.cpp  PerspectiveCamera.h
common/Scene/Geometry/Mesh/: MeshObject.cpp  MeshObject.h
common/Scene/Geometry/Primitives/: Primitive.h  PrimitiveBase.h
common/Scene/Geometry/Primitives/Triangle/: Triangle.cpp  Triangle.h
common/Scene/Geometry/Ray/: Ray.cpp  Ray.h
common/Scene/Geometry/Simple/Box/: Box.cpp  Box.h
common/Scene/Intersection/: IntersectionState.h
common/Scene/Lights/: Light.cpp  Light.h
common/Scene/Lights/Area/: AreaLight.cpp  AreaLight.h
common/Scene/Lights/Directional/: DirectionalLight.cpp  DirectionalLight.h
common/Scene/Lights/Point/: PointLight.cpp  PointLight.h
common/Utility/Diagnostics/: Diagnostics.cpp  Diagnostics.h
common/Utility/Mesh/Loading/: MeshLoader.cpp  MeshLoader.h
common/Utility/Texture/: TextureLoader.cpp  TextureLoader.h
common/Utility/Timer/: Timer.cpp  Timer.h
